--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/skurisu/Undead-Sass/issues"
   },
-  "homepage": "https://github.com/skurisu/Undead-Sass"
+  "homepage": "https://github.com/skurisu/Undead-Sass",
+  "devDependencies": {
+    "gulp": "^3.8.11",
+    "gulp-sass": "^1.3.2"
+  }
 }
